--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
-<video src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" type="video/mp4"
+<video>
+  <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" width="600" height="400" type="video/mp4">
+  <source 
   </body>
 </html>
