--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <video>
   <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" width="600" height="400" type="video/mp4">
   <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
+  </video>
   </body>
 </html>
