--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
-<video>
+    
+<video controls>
   <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" width="600" height="400" type="video/mp4">
   <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
   </video>
