--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- your code here! See README.md for deliverables -->
     
-<video controls>
+<video controls autoplay>
   <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" width="600" height="400" type="video/mp4">
   <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
   </video>
