--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- your code here! See README.md for deliverables -->
     
-<video width="600" height="400" controls autoplay>
+<video controls autoplay width="600" height="400">
   <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" type="video/mp4">
   <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
   </video>
