--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     <!-- your code here! See README.md for deliverables -->
     
-<video controls autoplay width="600" height="400">
-  <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" type="video/mp4">
-  <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
-  </video>
+ <video controls autoplay muted width="600px" height="400px">
+      <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" type="video/mp4">
+      <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg" type="video/ogg">
+      Your browser does not support HTML5 video  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+    </video>
   </body>
 </html>
